--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/server.js"
+    "start": "node ./server.js"
   },
   "keywords": [],
   "license": "ISC",
